# ecommerce-microservices-v2

./: .gitignore  Makefile  Readme.md  buf.gen.yaml  buf.yaml  docker-compose.yml  package-lock.json  package.json
api-gateway/: .env.example  .mockery.yaml  Cargo.toml  Dockerfile  Makefile  Readme.md  buf.gen.yaml  build.rs  descriptor.pb  go.mod  go.sum  gqlgen.yml  main.go  policy.rego
api-gateway/bootstrap/: bootstrap.go  dependency.go
api-gateway/cmd/: bootstrap.go  graphql.go  root.go  run.go
api-gateway/config/: config.go
api-gateway/connector/: amqp.go  mongodb.go
api-gateway/docs/v1/common/: response.swagger.json
api-gateway/docs/v1/event/: model.swagger.json
api-gateway/docs/v1/product/: model.swagger.json  service.swagger.json
api-gateway/docs/v1/user/: enum.swagger.json  service.swagger.json
api-gateway/enum/: contextKey.go  event.go  exchange.go  httpHeader.go  mongodbCollection.go  queue.go
api-gateway/infrastructure/mongodb/: mongodb.go
api-gateway/infrastructure/rabbitmq/: publish.go  rabbitmq.go
api-gateway/infrastructure/rpcclient/: rpcclient.go
api-gateway/infrastructure/service/: metadataCarrier.go  service.go
api-gateway/infrastructure/telemetry/: telemetry.go
api-gateway/model/bson/: eventStore.go
api-gateway/model/graph/schema/: cart.graphqls  payment.graphqls  paymentMutation.graphqls  paymentProvider.graphqls  paymentProviderQuery.graphqls  paymentQuery.graphqls  product.graphqls  productMutation.graphqls  productQuery.graphqls  user.graphqls  userMutation.graphqls  userQuery.graphqls
api-gateway/model/pb/: authService.pb.validate.go  cartMessage.pb.validate.go  cartService.pb.validate.go  productServices.pb.validate.go  userMessage.pb.validate.go  userService.pb.validate.go
api-gateway/model/rpc/pb/: authMessage.pb.go  authService.pb.go  authService_grpc.pb.go  cartMessage.pb.go  cartService.pb.go  cartService_grpc.pb.go  eventStoreMessage.pb.go  gatewayEventStoreMessage.pb.go  productMessage.pb.go  productServices.pb.go  productServices_grpc.pb.go  userMessage.pb.go  userService.pb.go  userService_grpc.pb.go
api-gateway/model/rpc/proto/: authMessage.proto  authService.proto  cartMessage.proto  cartService.proto  eventStoreMessage.proto  gatewayEventStoreMessage.proto  productMessage.proto  productServices.proto  userMessage.proto  userService.proto
api-gateway/module/auth/presenter/: createUser.go  presenter.go  userLoginByEmailAndPassword.go  userLogoutByToken.go  userVerifyOtp.go
api-gateway/module/auth/service/: auth.go  findUserByToken.go  userVerifyOtp.go
api-gateway/module/auth/usecase/: usecase.go  userLoginByEmailAndPassword.go  userLogoutByToken.go  userVerifyOtp.go
api-gateway/module/gatewayEventStore/usecase/: createGatewayEventStore.go  createGatewayEventStoreWithTransaction.go  usecase.go
api-gateway/module/product/service/: findProductById.go  findProductsWithPagination.go  product.go  service.go
api-gateway/module/product/usecase/: createProduct.go  findProductById.go  findProductsWithPagination.go  usecase.go
api-gateway/module/user/service/: findUserByEmailAndPassword.go  findUserById.go  user.go
api-gateway/module/user/usecase/: createUser.go  findUserById.go  updateUser.go  usecase.go
api-gateway/pkg/: circuitBreaker.go  zapLogger.go
api-gateway/proto/v1/event/: request.proto
api-gateway/proto/v1/shipping/: service.proto
api-gateway/proto/v1/user/: response.proto  service.proto
api-gateway/server/graphql/: graphql.go  option.go
api-gateway/server/graphql/resolver/: product.resolvers.go  productMutation.resolvers.go  productQuery.resolvers.go  userMutation.resolvers.go  userQuery.resolvers.go
api-gateway/src/: main.rs
api-gateway/src/cmd/: mod.rs  root.rs  run.rs
api-gateway/src/config/: config.rs  mod.rs  service_api_gateway.rs  service_event_rabbitmq.rs  service_shipping.rs  service_user_rabbitmq.rs  telemetry_jaeger.rs
api-gateway/src/infrastructure/: mod.rs
api-gateway/src/infrastructure/message_broker/: rabbitmq.rs
api-gateway/src/infrastructure/opa/: opa.rs
api-gateway/src/infrastructure/telemetry/: jaeger.rs
api-gateway/src/interceptor/: auth.rs  request_id.rs
api-gateway/src/interceptor/auth/: grpc_interceptor.rs  http_interceptor.rs  mod.rs
api-gateway/src/interceptor/request_id/: http_interceptor.rs  mod.rs
api-gateway/src/model/: mod.rs
api-gateway/src/model/rpc/: google.api.rs  payment.rs  response.rs  shipping.rs  user.rs  validate.rs
api-gateway/src/module/: mod.rs
api-gateway/src/module/auth/: http_presenter.rs  transport_grpc.rs  transport_rabbitmq.rs  usecase.rs
api-gateway/src/module/event/: consumer_rabbitmq.rs
api-gateway/src/module/notification/: http_presenter.rs
api-gateway/src/package/: mod.rs
api-gateway/src/transport/: mod.rs
api-gateway/src/util/: metadata.rs  mod.rs
api-gateway/transport/graphql/: graphql.go  option.go
api-gateway/util/: convert.go  metadataCarrier.go
commerce-service/: .env.example  (+7 more)
shipping-service/: .env  Cargo.toml  Dockerfile  Makefile  build.gradle  build.gradle.kts  build.rs  descriptor.pb  diesel.toml
shipping-service/migrations/2025-07-21-121437_create_shipping_providers/: down.sql  up.sql
shipping-service/migrations/2025-07-21-121501_create_shippings/: down.sql  up.sql
shipping-service/src/: main.rs
shipping-service/src/cmd/: migration.rs  mod.rs  root.rs  run.rs
shipping-service/src/config/: config.rs  mod.rs  service_shipping.rs
shipping-service/src/infrastructure/: mod.rs
shipping-service/src/interceptor/: auth.rs  mod.rs  request_id.rs
shipping-service/src/model/: mod.rs
shipping-service/src/module/: mod.rs
shipping-service/src/package/: mod.rs
shipping-service/src/pkg/: prometheus.rs
shipping-service/src/transport/: mod.rs
shipping-service/src/util/: convert_status.rs  grpc.rs  metadata.rs  mod.rs
(+2126 files in other folders)
