[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tonic-build = "0.12"
prost-validate-build = "0.2.5"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# ASYNC AND MULTITHREAD
tokio = { version = "1.38", features = ["full"] }

# CONFIG
config = { version = "0.15.13", features = ["toml"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15.0"

# CONSUL
consulrs = "0.1.0"

# TRACING & LOGGING
tracing-subscriber = { version = "0.3.19", features = ["json"] }
tracing = "0.1.41"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = { version = "0.11.0" }
tracing-opentelemetry = "0.19.0"

# RABBIQ MQ
lapin = "2.3"
thiserror = "1.0.69"

# GRPC SERVER
tonic = "0.12.3"
prost = "0.13.5"
prost-wkt-types = "0.6.1"
prost-validate = { version = "0.2.5", features = ["derive"] }
tower = "0.5.2"

# HTTP SERVER
http = "0.2.12"
axum = { version = "0.8.4", features = ["ws"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
hyper = { version = "1.6.0", features = ["full"] }

# HTTP CLIENT
reqwest = { version = "0.11", features = ["json"] }


# OpenAPI
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# UUID
uuid = { version = "1.17.0", features = ["v4"] }

# UTIL
anyhow = "1.0.98"
serde_json = "1.0.142"
futures = "0.3.31"

