[package]
name = "shipping-service"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tonic-build = "0.12"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# ASYNC AND MULTITHREAD
tokio = { version = "1.38", features = ["full"] }

# CONFIG
config = { version = "0.15.13", features = ["toml"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15.0"

# CONSUL
consulrs = "0.1.0"

# PROMETHEUS METRIC
prometheus = "0.14.0"
once_cell = "1.21.3"

# DEPENDNCY INJECTION
nject = "0.4"

# ORM
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
diesel_migrations = "2.2.0"

# TRACING & LOGGING
tracing-subscriber = { version = "0.3.19", features = ["json"] }
tracing = "0.1.41"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = { version = "0.11.0" }
tracing-opentelemetry = "0.19.0"

# GRPC SERVER
tonic = "0.12.3"
tonic-reflection = "0.12.0"
prost = "0.13.5"
prost-wkt-types = "0.6.1"

# UUID
uuid = { version = "1.17.0", features = ["v4"] }

## UTIL
anyhow = "1.0.98"
serde_json = "1.0.140"

# HTTP
http = "0.2.12"
axum = "0.8.4"
axum-tracing-opentelemetry = "0.29.0"

# RABBIQ MQ
rabbitmq-stream-client = "0.9.0"



